# Bike-Store-Relational-Database

./: .env  .gitignore  .health_last_run  README.md  health_check.py  pyproject.toml
Advanced Data Analytics/: Cohort analysis.sql  Monthly sales trend.sql  RFM segmentation.sql
Business Report/: Customer_report.sql  Inventory Analytics.sql  Product_report.sql  Store report.sql  Summary of everything.sql  staff report.sql
Datasets/: order_items.csv  orders.csv
Load dataset in PostgreSQL & Jupyter Notebook/: Bike Notebook.ipynb  Load Dataset in PostgreSQL.py
Power BI/: Dim_customers.sql  Dim_staffs.sql  Dim_stores.sql
docs/: data_catlog.md  data_quality_checks.md  incremental_loading.md  run_book.md
driver/: README.md
notebooks/: public.ipynb
reports/: brand_performance.md  store_performance.md
scripts/: README.md  mongo_to_postgres.py  updated_at.py
sql/: 01_database_exploration.sql  02_dimensions_exploration.sql  03_date_range_exploration.sql  04_measures_exploration.sql  05_magnitude_analysis.sql  06_ranking_analysis.sql  07_change_over_time_analysis.sql  08_cumulative_analysis.sql  09_performance_analysis.sql  10_data_segmentation.sql  11_part_to_whole_analysis.sql  12_customer_report.sql  13_product_report.sql  14_brand_report.sql  15_fn_store_performance.sql  15_store_report.sql  16_sales_report.sql  17_new_ve_return.sql  18_status_check.sql  19_cohort_analysis.sql  20_fn_inventory_summary.sql  21_fn_staff_performance.sql  README.md
tests/: 01_test_brands.sql  02_test_categories.sql  03_test_customers.sql  05_test_orders.sql  07_test_products.sql  (+6 more)
(+4 files in other folders)
