[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pymongo>=4.17.0",
    "pyspark>=4.1.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
]
